[package]
name = "xshell-venv"
version = "1.2.0"
edition = "2021"
license = "MIT"
description = "xshell-venv manages your Python virtual environments in code."
repository = "https://github.com/badboy/xshell-venv"

[dependencies]
fd-lock = "4.0.0"
xshell = "0.2"

[workspace]
members = [
  ".",
  "example"
]
